// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar matches the snapshot 1`] = `
<div
  aria-valuemax={3}
  aria-valuemin={0}
  aria-valuenow={2}
  aria-valuetext="Step 1 of 3"
  className="css-1l8ew5k"
  role="progressbar"
  style={
    Object {
      "width": "67%",
    }
  }
/>
`;

exports[`ProgressBar should clamp to 100 1`] = `
<div
  aria-valuemax={3}
  aria-valuemin={0}
  aria-valuenow={4}
  aria-valuetext="Step 4 of 3"
  className="css-1l8ew5k"
  role="progressbar"
  style={
    Object {
      "width": "100%",
    }
  }
/>
`;
